Tag cards on mobile fixed with extra padding

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,3 @@
-*, html {
-   
-}
 
 body{
     position: relative;
@@ -13,13 +10,10 @@ height: 100%;
 
 }
 #tags {
-    width: fit-content;
     margin: 0 auto;
+    padding: 5%;
 }
-section{
-    width: fit-content;
-    margin: 0 auto;
-}
+
 
 
 canvas {
